--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p class="about__text">
           <h2>Yo what's up.</h2> When I'm not coding, I'm making beats and
           rapping. My love for music led me down a path in contemporary classical
-          music composition, Argenine tango, and Salsa.
+          music composition, Argentine tango, and Salsa.
         </p>
       </div>
 
