fixed project titles

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                 <img class="project-thumbnails" src="assets/images/websites/wine-food-small.png" alt="Wine + Food App" />
               </a>
               <br />
-              <h3>Clear View Escapes</h3>
-              <span>Travel Business Website</span>
+              <h3>Wine + Food</h3>
+              <span>Wine pairing database tool</span>
               <br />
-              <span>Static website</span>
+              <span>MERN stack app</span>
             </p>
           </div>
 
@@ -135,10 +135,10 @@
                 <img class="project-thumbnails" src="assets/images/websites/zen-garden-small.png" alt="CSS Zen Garden" />
               </a>
               <br />
-              <h3>Clear View Escapes</h3>
-              <span>Travel Business Website</span>
+              <h3>CSS Zen Garden</h3>
+              <span>csszengarden.com recreated</span>
               <br />
-              <span>Static website</span>
+              <span>HTML 5 + CSS 3</span>
             </p>
           </div>
     
@@ -153,10 +153,10 @@
                 <img class="project-thumbnails" src="assets/images/websites/ghetto-stop-watch-small.png" alt="Ghetto Stop Watch" />
               </a>
               <br />
-              <h3>Clear View Escapes</h3>
-              <span>Travel Business Website</span>
+              <h3>Ghetto stop watch</h3>
+              <span>modeled from Google stop watch</span>
               <br />
-              <span>Static website</span>
+              <span>React-Redux app</span>
             </p>
           </div>
 
@@ -171,10 +171,10 @@
                 <img class="project-thumbnails" src="assets/images/websites/star-whores-small.png" alt="Star Whores Ultimate Database" />
               </a>
               <br />
-              <h3>Clear View Escapes</h3>
-              <span>Travel Business Website</span>
+              <h3>Star Whores</h3>
+              <span>the ultimate Star Wars database</span>
               <br />
-              <span>Static website</span>
+              <span>React front end, SWAPI api</span>
             </p>
           </div>
       </div>
