fixed animations, section padding, nov courses

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
 
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
     <title>Cholo 3000</title>
 </head>
 <body>
@@ -35,10 +35,10 @@
   </header>
 
   <section >
-    <div class="section-title section-title--about wow fadeIn zoomIn" id="about" data-matching-link="#about-link">
+    <div class="section-title section-title--about" id="about" data-matching-link="#about-link">
         <h1>About Me</h1>
     </div>
-    <div class="about wow fadeIn zoomIn">
+    <div class="about">
       <div >
         <a
         href="https://open.spotify.com/artist/38EiJG95oYwu4TuTsgtHHa#_=_"
@@ -51,7 +51,7 @@
 
       <div>
         <p class="about__text">
-          <h2>Yo what's up.</h2> When I'm not coding, I'm making beats and
+          <h3>Yo what's up.</h3> When I'm not coding, I'm making beats and
           rapping. My love for music led me down a path in contemporary classical
           music composition, Argentine tango, and Salsa.
         </p>
@@ -82,13 +82,13 @@
   </section>
 <!-- PROJECTS BLOCKS-->
   <section>
-      <div class="section-title section-title--projects wow fadeIn zoomIn" id="projects" data-matching-link="#projects-link">
+      <div class="section-title section-title--projects" id="projects" data-matching-link="#projects-link">
           <h1>Projects</h1>
       </div>
       <div class="project__wrapper">
 
 
-          <div class="project__block wow fadeIn zoomIn">
+          <div class="project__block">
             <p>
               <a
               data-fancybox 
@@ -106,7 +106,7 @@
             </p>
           </div>
 
-          <div class="project__block wow fadeIn zoomIn">
+          <div class="project__block">
             <p>
               <a
               data-fancybox 
@@ -124,7 +124,7 @@
             </p>
           </div>
 
-          <div class="project__block wow fadeIn zoomIn">
+          <div class="project__block">
             <p>
               <a
               data-fancybox 
@@ -142,7 +142,7 @@
             </p>
           </div>
     
-          <div class="project__block wow fadeIn zoomIn">
+          <div class="project__block">
             <p>
               <a
               data-fancybox 
@@ -160,7 +160,7 @@
             </p>
           </div>
 
-          <div class="project__block wow fadeIn zoomIn">
+          <div class="project__block">
             <p>
               <a
               data-fancybox 
@@ -262,11 +262,11 @@
 
 <!-- SKILLS-->
   <section >  
-    <div class="section-title section-title--skills wow fadeIn zoomIn" id="skills" data-matching-link="#skills-link">
+    <div class="section-title section-title--skills" id="skills" data-matching-link="#skills-link">
         <h1>Skills</h1>
     </div>
     <div class="skills">
-      <div class="skills__block wow fadeIn zoomIn">
+      <div class="skills__block">
         <p>
             <h3>preferred environment:</h3>
             <img class="skills-images" src="assets/images/skills/windows.svg" alt="Windows"/>
@@ -276,17 +276,17 @@
         </p>
       </div>
 
-      <div class="skills__block wow fadeIn zoomIn">
+      <div class="skills__block">
         <p>
             <h3>design skills:</h3>
             <img class="skills-images" src="assets/images/skills/photo-shop.svg" alt="Adobe Photoshop"/>
-            <img class="skills-images" src="assets/images/skills/light-room.svg" alt="Adobe Light Room"/>
-            <img class="skills-images" src="assets/images/skills/premier.svg" alt="Premier"/> 
+            <img class="skills-images" src="assets/images/skills/material-design.svg" alt="Material Design"/>
+            <img class="skills-images" src="assets/images/skills/adobe-xd.png" alt="Adobe XD"/> 
             <img class="skills-images" src="assets/images/skills/sass.png" alt="Sassy CSS"/> 
         </p>
       </div>
 
-      <div class="skills__block wow fadeIn zoomIn">
+      <div class="skills__block">
         <p>
             <h3>languages:</h3>
             <img class="skills-images" src="assets/images/skills/html.svg" alt="html"/>
@@ -297,7 +297,7 @@
         </p>
       </div>
 
-      <div class="skills__block wow fadeIn zoomIn">
+      <div class="skills__block">
           <p>
               <h3>web dev toolkit:</h3>
               <img class="skills-images" src="assets/images/skills/mongo.svg" alt="html"/>
@@ -314,11 +314,11 @@
   </section>
 <!-- EDUCATION -->
   <section >
-      <div class="section-title section-title--education wow fadeIn zoomIn" id="education" data-matching-link="#education-link">
+      <div class="section-title section-title--education" id="education" data-matching-link="#education-link">
           <h1>Education</h1>
       </div>
       <div class="education__wrapper">
-          <div class="education__block wow fadeIn zoomIn">
+          <div class="education__block">
               <p>
                   
                   <img class="education__images" src="assets/images/education/v-school.png" alt="V School"/><br></br>
@@ -332,7 +332,7 @@
                   <span>Masters of Fine Arts, Music Composition </span>
               </p>
           </div>
-          <div class="education__block wow fadeIn zoomIn">
+          <div class="education__block">
               <p>
                   <img class="education__images" src="assets/images/education/ucsb.png" alt="UCSB"/><br></br>
                   <h4>University of California, Santa Barbara, College of Creative Studies, 2009 – 2011</h4>
@@ -351,12 +351,14 @@
 
 
   <!-- CERTIFICATE-->
-  <section class="section-title section-title--certifications wow fadeIn zoomIn">
-      <div class="section-title" id="certificates" data-matching-link="#certificates-link">
+  <section>
+      <div class="section-title section-title--certifications" id="certificates" data-matching-link="#certificates-link">
           <h1>Certificates</h1>
       </div>
       <div class="certificates__wrapper">
         <div><img class="certificates__images" src="assets/images/education/udemy.png" alt="Udemy"/></div>
+        <p><strong><a href="https://www.udemy.com/certificate/UC-MU5016FM/" target="_blank">Web UI UX Design using Adobe XD - User Experience Design</a> </strong></p><span>Nov 2018</span> 
+        <p><strong><a href="https://www.udemy.com/certificate/UC-U6HIK7R6/" target="_blank">Sass Workflow</a> </strong></p><span>Nov 2018</span> 
         <p><strong><a href="https://www.udemy.com/certificate/UC-A5F69561/" target="_blank">Git a Web Developer Job: Mastering the Modern Workflow</a> </strong></p><span>Nov 2018</span>        
         <p><strong><a href="https://www.udemy.com/certificate/UC-RLEG0O95/" target="_blank">Web Design for Beginners: Real World Coding in HTML & CSS</a></strong></p><span>Nov 2018</span>
         <p><strong><a href="https://www.udemy.com/certificate/UC-9VNFX507/" target="_blank">Functional Programming For Beginners With JavaScript</a></strong></p><span>Nov 2018</span>
@@ -366,8 +368,8 @@
 
 
   <!-- FOOTER -->
-  <footer class="section-title section-title--footer wow fadeIn zoomIn">
-      <div class="section-title" id="footer" data-matching-link="#footer-link">
+  <footer>
+      <div class="section-title section-title--footer" id="footer" data-matching-link="#footer-link">
           <h1>Contact</h1>
       </div>
    
