add small project icons

--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
               <span>Travel Business Website</span>
               <br />
               <span>Static website</span>
+              <br />
+              <span>
+                  <img class="project-skills-images" src="assets/images/skills/jquery.png" alt="jquery"/>
+                  <img class="project-skills-images" src="assets/images/skills/webpack-edit.png" alt="webpack"/>
+                  <img class="project-skills-images" src="assets/images/skills/gulp-edit.png" alt="gulp"/>
+              </span>
+            </a>
             </p>
           </div>
 
@@ -121,6 +128,14 @@
               <span>Wine pairing database tool</span>
               <br />
               <span>MERN stack app</span>
+              <br />
+              <span>
+                  <img class="project-skills-images" src="assets/images/skills/react.svg" alt="react"/>
+                  <img class="project-skills-images" src="assets/images/skills/redux-edit.png" alt="redux"/>
+                  <img class="project-skills-images" src="assets/images/skills/express-edit.png" alt="express"/>
+                  <img class="project-skills-images" src="assets/images/skills/node.svg" alt="node"/>
+                  <img class="project-skills-images" src="assets/images/skills/mongo.svg" alt="mongo"/>
+              </span>
             </p>
           </div>
 
@@ -139,6 +154,11 @@
               <span>csszengarden.com recreated</span>
               <br />
               <span>HTML 5 + CSS 3</span>
+              <br />
+              <span>
+                  <img class="project-skills-images" src="assets/images/skills/html.svg" alt="HTML 5"/>
+                  <img class="project-skills-images" src="assets/images/skills/css.svg" alt="CSS 3"/>
+              </span>
             </p>
           </div>
     
@@ -157,6 +177,11 @@
               <span>modeled from Google stop watch</span>
               <br />
               <span>React-Redux app</span>
+              <br />
+              <span>
+                  <img class="project-skills-images" src="assets/images/skills/react.svg" alt="react"/>
+                  <img class="project-skills-images" src="assets/images/skills/redux-edit.png" alt="redux"/>
+              </span>
             </p>
           </div>
 
@@ -175,6 +200,11 @@
               <span>the ultimate Star Wars database</span>
               <br />
               <span>React front end, SWAPI api</span>
+              <br />
+              <span>
+                  <img class="project-skills-images" src="assets/images/skills/react.svg" alt="react"/>
+                  <img class="project-skills-images" src="assets/images/skills/redux-edit.png" alt="redux"/>
+              </span>
             </p>
           </div>
       </div>
