fixed express logo and added certificate

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <span>
                   <img class="project-skills-images" src="assets/images/skills/react.svg" alt="react"/>
                   <img class="project-skills-images" src="assets/images/skills/redux-edit.png" alt="redux"/>
-                  <img class="project-skills-images" src="assets/images/skills/express-edit.png" alt="express"/>
+                  <img class="project-skills-images project-skills-images--grey" src="assets/images/skills/express-edit-2.png" alt="express"/>
                   <img class="project-skills-images" src="assets/images/skills/node.svg" alt="node"/>
                   <img class="project-skills-images" src="assets/images/skills/mongo.svg" alt="mongo"/>
               </span>
@@ -387,6 +387,7 @@
       </div>
       <div class="certificates__wrapper">
         <div><img class="certificates__images" src="assets/images/education/udemy.png" alt="Udemy"/></div>
+        <p><strong><a href="https://www.udemy.com/certificate/UC-U7O5UX4T/" target="_blank">The Coding Interview Bootcamp: Algorithms + Data Structures</a> </strong></p><span>Dec 2018</span> 
         <p><strong><a href="https://www.udemy.com/certificate/UC-MU5016FM/" target="_blank">Web UI UX Design using Adobe XD - User Experience Design</a> </strong></p><span>Nov 2018</span> 
         <p><strong><a href="https://www.udemy.com/certificate/UC-U6HIK7R6/" target="_blank">Sass Workflow</a> </strong></p><span>Nov 2018</span> 
         <p><strong><a href="https://www.udemy.com/certificate/UC-A5F69561/" target="_blank">Git a Web Developer Job: Mastering the Modern Workflow</a> </strong></p><span>Nov 2018</span>        
