fixed margin thing

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
       style="display: none;" 
       id="gau-lightbox" 
       class="lightbox-modal"
+      width="100%"
       >
         <div class="lightbox-modal__image">
             <a href="http://gustavoadolfouribe.surge.sh/" target="_blank"><img src="assets/images/websites/gau-website-small.jpg" width="100%"></a>
