added light box image class and 2 new jan certificates

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       width="100%"
       >
         <div class="lightbox-modal__image">
-            <a href="http://gustavoadolfouribe.surge.sh/" target="_blank"><img src="assets/images/websites/gau-website-small.jpg" width="100%"></a>
+            <a href="http://gustavoadolfouribe.surge.sh/" target="_blank"><img src="assets/images/websites/gau-website-small.jpg" class="project-image"></a>
         </div>
         <div class="lightbox-modal__text">
             <p><strong>Project overview:</strong> A mobile first website custom tailored for Gustavo Adolfo Uribe. Features a video background with an Instagram style unmute button on the homepage. The other pages feature different drop cap text layouts to simulate a high fashion magazine.</p>
@@ -257,7 +257,7 @@
       class="lightbox-modal"
       >
         <div class="lightbox-modal__image">
-            <a href="https://gustavouribe.github.io/travel-site-cholo3000/" target="_blank"><img src="assets/images/websites/travel-site-small.png" width="100%"
+            <a href="https://gustavouribe.github.io/travel-site-cholo3000/" target="_blank"><img src="assets/images/websites/travel-site-small.png" class="project-image"
             ></a>
         </div>
         <div class="lightbox-modal__text">
@@ -273,7 +273,7 @@
         class="lightbox-modal"
       >
         <div class="lightbox-modal__image">
-            <a href="https://wine-food.herokuapp.com/" target="_blank"><img src="assets/images/websites/wine-food-small.png" width="100%"></a>
+            <a href="https://wine-food.herokuapp.com/" target="_blank"><img src="assets/images/websites/wine-food-small.png" class="project-image"></a>
         </div>
         <div class="lightbox-modal__text">
             <p><strong>Project overview:</strong> A food pairing web app created for wine enthusiasts. Users can search for their favorite wines and find recommended food pairings and vice versa. Users can also edit and add entries to the database. </p>
@@ -288,7 +288,7 @@
         class="lightbox-modal"
       >
         <div class="lightbox-modal__image">
-            <a href="http://csszengarden.surge.sh/" target="_blank"><img src="assets/images/websites/zen-garden-small.png" width="100%"></a>
+            <a href="http://csszengarden.surge.sh/" target="_blank"><img src="assets/images/websites/zen-garden-small.png" class="project-image"></a>
         </div>
         <div class="lightbox-modal__text">
             <p><strong>Project overview:</strong> A replica of www.csszengarden.com, this project was created as an exercise to duplicate older css languages with newer CSS 3 practices. </p>
@@ -303,7 +303,7 @@
       class="lightbox-modal"
       >
         <div class="lightbox-modal__image">
-            <a href="http://ghettostopwatch.surge.sh/" target="_blank"><img src="assets/images/websites/ghetto-stop-watch-small.png" width="100%"></a>
+            <a href="http://ghettostopwatch.surge.sh/" target="_blank"><img src="assets/images/websites/ghetto-stop-watch-small.png" class="project-image"></a>
         </div>
         <div class="lightbox-modal__text">
             <p><strong>Project overview:</strong> A tongue in cheek replica of Google's stop watch web app.</p>
@@ -318,7 +318,7 @@
       class="lightbox-modal"
       >
         <div class="lightbox-modal__image">
-            <a href="http://starwhores.surge.sh/" target="_blank"><img src="assets/images/websites/star-whores-small.png" width="100%"></a>
+            <a href="http://starwhores.surge.sh/" target="_blank"><img src="assets/images/websites/star-whores-small.png" class="project-image"></a>
         </div>
         <div class="lightbox-modal__text">
             <p><strong>Project overview:</strong> Using the Star Wars API (swapi), this website was themed for the most zealous Star Wars afficionado. Modeled after a Star Wars Visual Guide, this version uses custom Star Wars fonts, a Star Wars scroll, a custom header fined tuned with seven media queries.</p>
@@ -426,6 +426,8 @@
       </div>
       <div class="certificates__wrapper">
         <div><img class="certificates__images" src="assets/images/education/udemy.png" alt="Udemy"/></div>
+        <p><strong><a href="https://www.udemy.com/certificate/UC-4BYW9LOO/" target="_blank">Complete SEO Training With Top SEO Expert Peter Kent!</a> </strong></p><span>Jan 2019</span> 
+        <p><strong><a href="https://www.udemy.com/certificate/UC-CB6I0RYJ/" target="_blank">JavaScript Design Patterns: 20 Patterns for Expert Code</a> </strong></p><span>Jan 2019</span> 
         <p><strong><a href="https://www.udemy.com/certificate/UC-U7O5UX4T/" target="_blank">The Coding Interview Bootcamp: Algorithms + Data Structures</a> </strong></p><span>Dec 2018</span> 
         <p><strong><a href="https://www.udemy.com/certificate/UC-Q69LHH3W/" target="_blank">Master Web Design in Photoshop</a> </strong></p><span>Dec 2018</span> 
         <p><strong><a href="https://www.udemy.com/certificate/UC-MU5016FM/" target="_blank">Web UI UX Design using Adobe XD - User Experience Design</a> </strong></p><span>Nov 2018</span> 
