update with cryto and aj maka

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 href="javascript:;"
                 >
   
-                  <img class="project-thumbnails" src="assets/images/websites/gau-website-small.jpg" alt="Clear View Escapes" />
+                  <img class="project-thumbnails" src="assets/images/websites/gau-website-small.jpg" alt="GustavoAdolfoUribe.com" />
                 </a>
                 <br />
                 <h3>Gustavo Adolfo Uribe</h3>
@@ -110,6 +110,59 @@
               </a>
               </p>
             </div>
+
+            <div class="project__block">
+              <p>
+                <a
+                data-fancybox 
+                data-src="#cryptodash-lightbox" 
+                href="javascript:;"
+                >
+  
+                  <img class="project-thumbnails" src="assets/images/websites/crypto-thumbnail-edit.png" alt="CryptoDash" />
+                </a>
+                <br />
+                <h3>CryptoDash</h3>
+                <span>Crypto Currency Dashboard</span>
+                <br />
+                <span>React Data Visualization</span>
+                <br />
+                <span>
+                    <img class="project-skills-images" src="assets/images/skills/jquery.png" alt="jquery"/>
+                    <img class="project-skills-images" src="assets/images/skills/webpack-edit.png" alt="webpack"/>
+                    <img class="project-skills-images" src="assets/images/skills/gulp-edit.png" alt="gulp"/>
+                </span>
+              </a>
+              </p>
+            </div>
+
+            <div class="project__block">
+              <p>
+                <a
+                data-fancybox 
+                data-src="#ajmaka-lightbox" 
+                href="javascript:;"
+                >
+  
+                  <img class="project-thumbnails" src="assets/images/websites/ajmaka-website.jpg" alt="AJ Maka Distributing" />
+                </a>
+                <br />
+                <h3>AJ Maka Distributing</h3>
+                <span>Commercial Website</span>
+                <br />
+                <span>React Front-End/Custom CMS</span>
+                <br />
+                <span>
+                    <img class="project-skills-images" src="assets/images/skills/react.svg" alt="React.js"/>
+                    <img class="project-skills-images" src="assets/images/skills/material-design.svg" alt="webpack"/>
+                    <img class="project-skills-images" src="assets/images/skills/aws2.png" alt="gulp"/>
+                </span>
+              </a>
+              </p>
+            </div>
+
+
+
 
           <div class="project__block">
             <p>
@@ -250,6 +303,40 @@
             <p><strong>Technologies used: </strong>The site was built in a custom SCSS create-react-app template. React-router was used for the webpage routes. The website's video was custom edited and optimized for download speed. There are different image crops for mobile first design. Hosted on Surge</p>               
         </div>
       </div>
+
+      <div 
+      data-type="gallery" 
+      style="display: none;" 
+      id="cryptodash-lightbox" 
+      class="lightbox-modal"
+      width="100%"
+      >
+        <div class="lightbox-modal__image">
+            <a href="https://gustavouribe.github.io/crypto-cholo3000/" target="_blank"><img src="assets/images/websites/crypto-thumbnail-edit.png" class="project-image"></a>
+        </div>
+        <div class="lightbox-modal__text">
+            <p><strong>Project overview:</strong> A Crypto Currency dashboard where users can choose and search for their favorite Crypto currencies, and check their price performance over time.</p>
+            <p><strong>Technologies used: </strong>A React App that uses Context for state management, local storage to save users favorite currencies, CryptoCompare API to pull price data, Fuzzy Search library for searching, HighCharts library to generate charts. Hosted on GitHub Pages</p>               
+        </div>
+      </div>
+
+      <div 
+      data-type="gallery" 
+      style="display: none;" 
+      id="ajmaka-lightbox" 
+      class="lightbox-modal"
+      width="100%"
+      >
+        <div class="lightbox-modal__image">
+            <a href="http://www.ajmakadistributors.com/" target="_blank"><img src="assets/images/websites/ajmaka-website.jpg" class="project-image"></a>
+        </div>
+        <div class="lightbox-modal__text">
+            <p><strong>Project overview:</strong> A website with custom CMS portal where user can update their brand logos. This is was created with <a href="http://www.alexdrenn.com/" target="_blank" class="project-link-text" style="color: black;">Alex Renn</a> as a final project for V School Coding School.</p>
+            <p><strong>Technologies used: </strong>Built with a client and server React app, the logo images are stored on AWS. The events are pulled from Instafeed API. The Email contact is made with MaterializeCSS.  </p>               
+        </div>
+      </div>
+
+
       <div 
       data-type="gallery" 
       style="display: none;" 
@@ -426,6 +513,18 @@
       </div>
       <div class="certificates__wrapper">
         <div><img class="certificates__images" src="assets/images/education/udemy.png" alt="Udemy"/></div>
+
+
+
+
+
+        <p><strong><a href="https://www.udemy.com/certificate/UC-K1IRZDPI/" target="_blank">Spotify Clone from Scratch: JavaScript PHP and MySQL</a> </strong></p><span>Jan 2019</span> 
+
+        <p><strong><a href="https://www.udemy.com/certificate/UC-TB0MSTJT/" target="_blank">Build a Slack Chat App with React, Redux, and Firebase</a> </strong></p><span>Jan 2019</span> 
+
+        <p><strong><a href="https://www.udemy.com/certificate/UC-A3HZFDJ8/" target="_blank"> React Data Visualization - Build a Cryptocurrency Dashboard</a> </strong></p><span>Jan 2019</span> 
+
+
         <p><strong><a href="https://www.udemy.com/certificate/UC-K1IRZDPI/" target="_blank">Node with React: Fullstack Web Development</a> </strong></p><span>Jan 2019</span> 
         <p><strong><a href="https://www.udemy.com/certificate/UC-4BYW9LOO/" target="_blank">Complete SEO Training With Top SEO Expert Peter Kent!</a> </strong></p><span>Jan 2019</span> 
         <p><strong><a href="https://www.udemy.com/certificate/UC-CB6I0RYJ/" target="_blank">JavaScript Design Patterns: 20 Patterns for Expert Code</a> </strong></p><span>Jan 2019</span> 
